feat(cache): implements cache to patients profile